Wed Oct  8 12:16:04 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, bearoff.h, format.c, format.h, gtkgame.c,
	gtkmovefilter.c, gtkmovefilter.h, rollout.c, rollout.h,
	board3d/drawboard3d.c, board3d/fun3d.h, board3d/misc3d.c,
	board3d/misc3d.h: remove a number of unused codefragments

Sun Oct  5 07:52:09 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: check for legal dest points for normal click moves.

Fri Oct  3 11:44:47 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubgmodule.c: fix a couple of sizeof usage errors introduced by
	TanBoard

Mon Sep 29 11:59:31 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h commands.inc export.h gnubg.c gtkexport.c, gtkoptions.c
	gtkrolls.c html.c import.c makebearoff.c, makehyper.c play.c record.c
	rollout.c set.c show.c text.c, po/Makefile.in.in po/cs.po po/da.po
	po/de.po po/en_US.po, po/fr.po po/gnubg.pot po/is.po po/it.po po/ja.po
	po/ru.po, po/tr.po: completed the danish translation and updated a
	number of strings
	
Sat Sep 27 22:27:05 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* lib/Makefile.am, lib/neuralnet.c, lib/neuralnet.h,
	lib/neuralnetsse.c, lib/sigmoid.h: allow a small speedup by inlining
	the sigmoid function again.

Tue Sep 23 21:59:02 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkmovefilter.c, gtkrace.c, gtkrelational.c, gtkwindows.c,
	gtkwindows.h: remove GtkSignalFunc as it will be deprecated

Tue Sep 23 17:41:15 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* text.c: fix minor \n output bug

Tue Sep 23 17:29:17 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, render.c, pixmaps/Makefile.am: fix a few minor without
	gtk issues

Tue Sep 23 12:44:36 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubg.c, gtkboard.c, gtkboard.h,
	gtkoptions.c, set.c: add option to disable boardgraying

Sun Sep 29 19:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>
	* gtkboard.c, render.c: Attempt to gray board in edit mode
